@@ -19,7 +19,7 @@
 
     <groupId>com.graphaware.neo4j</groupId>
     <artifactId>timetree</artifactId>
-    <version>2.1.5.21.18-SNAPSHOT</version>
+    <version>2.1.5.22.18-SNAPSHOT</version>
 
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -80,7 +80,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <neo4j.version>2.1.5</neo4j.version>
         <spring.version>4.1.1.RELEASE</spring.version>
-        <graphaware.version>2.1.5.21</graphaware.version>
+        <graphaware.version>2.1.5.22-SNAPSHOT</graphaware.version>
     </properties>
 
     <dependencies>
